# fast_change_detection

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile.in  LICENSE.txt  README.md  package.xml
example/: download_dataset.sh  run_example.sh
src/: example.cpp
src/fastcd/: camera.cpp  camera.h  change_detector.cpp  change_detector.h  depth_projector.cpp  depth_projector.h  image.cpp  image.h  image_region.h  image_sequence.cpp  image_sequence.h  mesh.cpp  mesh.h  point_covariance2d.cpp  point_covariance2d.h  point_covariance3d.cpp  point_covariance3d.h  processed_image.cpp  processed_image.h  regions3d_projector.cpp  regions3d_projector.h  regions_matcher.h  regions_matcher_hist.cpp  regions_matcher_hist.h
src/fastcd/shaders/: project_mesh.frag  project_mesh.vert
src/utils/: obj_reader.cpp  obj_reader.h
src/visualizer/: visualizer.cpp  visualizer.h
src/visualizer/shaders/: colored_vertices.frag  colored_vertices.vert  draw_mesh.frag  draw_mesh.vert  render_points.frag  render_points.vert
